Assets/Scripts/AnimationControl/OAL/AutoGenerated/OALParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from OAL.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class OALParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, BOOL=61, NAME=62, STRING=63, NUM=64, COMMENT=65, WHITE_SPACE=66;
	public const int
		RULE_lines = 0, RULE_line = 1, RULE_commands = 2, RULE_parCommand = 3, 
		RULE_threadCommand = 4, RULE_ifCommand = 5, RULE_elif = 6, RULE_elseBlock = 7, 
		RULE_condition = 8, RULE_whileCommand = 9, RULE_foreachCommand = 10, RULE_continueCommand = 11, 
		RULE_breakCommand = 12, RULE_commentCommand = 13, RULE_exeCommandQueryCreate = 14, 
		RULE_exeCommandQueryDelete = 15, RULE_exeCommandAssignment = 16, RULE_exeCommandCall = 17, 
		RULE_exeCommandCreateList = 18, RULE_listLiteral = 19, RULE_exeCommandAddingToList = 20, 
		RULE_exeCommandRemovingFromList = 21, RULE_exeCommandWrite = 22, RULE_exeCommandRead = 23, 
		RULE_returnCommand = 24, RULE_expr = 25, RULE_accessChain = 26, RULE_accessChainPrefix = 27, 
		RULE_accessChainElement = 28, RULE_methodCall = 29, RULE_parameterList = 30, 
		RULE_parameterListSuffix = 31, RULE_bracketedExpr = 32, RULE_typeName = 33, 
		RULE_className = 34, RULE_arrayType = 35, RULE_variableName = 36, RULE_methodName = 37, 
		RULE_attribute = 38;
	public static readonly string[] ruleNames = {
		"lines", "line", "commands", "parCommand", "threadCommand", "ifCommand", 
		"elif", "elseBlock", "condition", "whileCommand", "foreachCommand", "continueCommand", 
		"breakCommand", "commentCommand", "exeCommandQueryCreate", "exeCommandQueryDelete", 
		"exeCommandAssignment", "exeCommandCall", "exeCommandCreateList", "listLiteral", 
		"exeCommandAddingToList", "exeCommandRemovingFromList", "exeCommandWrite", 
		"exeCommandRead", "returnCommand", "expr", "accessChain", "accessChainPrefix", 
		"accessChainElement", "methodCall", "parameterList", "parameterListSuffix", 
		"bracketedExpr", "typeName", "className", "arrayType", "variableName", 
		"methodName", "attribute"
	};

	private static readonly string[] _LiteralNames = {
		null, "'par'", "'end par'", "';'", "'thread'", "'end thread'", "'if'", 
		"'end if'", "'elif'", "'elseBlock'", "'('", "')'", "'while'", "'end while'", 
		"'for each '", "' in '", "'end for'", "'continue'", "'break'", "'create object instance '", 
		"' of '", "'create object instance of '", "'delete object instance '", 
		"'assign '", "'='", "'.'", "'create list '", "'{'", "'}'", "'add '", "' to '", 
		"'remove '", "' from '", "'write('", "'(read('", "'))'", "'return'", "'cardinality '", 
		"'empty '", "'not_empty '", "'*'", "'/'", "'%'", "'+'", "'-'", "'<'", 
		"'>'", "'<='", "'>='", "'=='", "'!='", "'not '", "'NOT '", "' and '", 
		"' AND '", "' or '", "' OR '", "'['", "']'", "','", "'[]'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "BOOL", "NAME", "STRING", "NUM", "COMMENT", "WHITE_SPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "OAL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static OALParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public OALParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public OALParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class LinesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(OALParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public LinesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lines; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterLines(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitLines(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLines(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LinesContext lines() {
		LinesContext _localctx = new LinesContext(Context, State);
		EnterRule(_localctx, 0, RULE_lines);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 78;
				line();
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__11) | (1L << T__13) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__25) | (1L << T__28) | (1L << T__30) | (1L << T__32) | (1L << T__35) | (1L << NAME))) != 0) || _la==COMMENT );
			State = 83;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandQueryCreateContext exeCommandQueryCreate() {
			return GetRuleContext<ExeCommandQueryCreateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandQueryDeleteContext exeCommandQueryDelete() {
			return GetRuleContext<ExeCommandQueryDeleteContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandAssignmentContext exeCommandAssignment() {
			return GetRuleContext<ExeCommandAssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandCallContext exeCommandCall() {
			return GetRuleContext<ExeCommandCallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandCreateListContext exeCommandCreateList() {
			return GetRuleContext<ExeCommandCreateListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandAddingToListContext exeCommandAddingToList() {
			return GetRuleContext<ExeCommandAddingToListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandRemovingFromListContext exeCommandRemovingFromList() {
			return GetRuleContext<ExeCommandRemovingFromListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandWriteContext exeCommandWrite() {
			return GetRuleContext<ExeCommandWriteContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExeCommandReadContext exeCommandRead() {
			return GetRuleContext<ExeCommandReadContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReturnCommandContext returnCommand() {
			return GetRuleContext<ReturnCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContinueCommandContext continueCommand() {
			return GetRuleContext<ContinueCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BreakCommandContext breakCommand() {
			return GetRuleContext<BreakCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhileCommandContext whileCommand() {
			return GetRuleContext<WhileCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfCommandContext ifCommand() {
			return GetRuleContext<IfCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ForeachCommandContext foreachCommand() {
			return GetRuleContext<ForeachCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParCommandContext parCommand() {
			return GetRuleContext<ParCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentCommandContext commentCommand() {
			return GetRuleContext<CommentCommandContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			State = 102;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 85;
				exeCommandQueryCreate();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 86;
				exeCommandQueryDelete();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 87;
				exeCommandAssignment();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 88;
				exeCommandCall();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 89;
				exeCommandCreateList();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 90;
				exeCommandAddingToList();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 91;
				exeCommandRemovingFromList();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 92;
				exeCommandWrite();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 93;
				exeCommandRead();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 94;
				returnCommand();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 95;
				continueCommand();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 96;
				breakCommand();
				}
				break;
			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 97;
				whileCommand();
				}
				break;
			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 98;
				ifCommand();
				}
				break;
			case 15:
				EnterOuterAlt(_localctx, 15);
				{
				State = 99;
				foreachCommand();
				}
				break;
			case 16:
				EnterOuterAlt(_localctx, 16);
				{
				State = 100;
				parCommand();
				}
				break;
			case 17:
				EnterOuterAlt(_localctx, 17);
				{
				State = 101;
				commentCommand();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public CommandsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commands; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterCommands(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitCommands(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommands(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandsContext commands() {
		CommandsContext _localctx = new CommandsContext(Context, State);
		EnterRule(_localctx, 4, RULE_commands);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__11) | (1L << T__13) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__25) | (1L << T__28) | (1L << T__30) | (1L << T__32) | (1L << T__35) | (1L << NAME))) != 0) || _la==COMMENT) {
				{
				{
				State = 104;
				line();
				}
				}
				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParCommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ThreadCommandContext[] threadCommand() {
			return GetRuleContexts<ThreadCommandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ThreadCommandContext threadCommand(int i) {
			return GetRuleContext<ThreadCommandContext>(i);
		}
		public ParCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parCommand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterParCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitParCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParCommandContext parCommand() {
		ParCommandContext _localctx = new ParCommandContext(Context, State);
		EnterRule(_localctx, 6, RULE_parCommand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			Match(T__0);
			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 111;
				threadCommand();
				}
				}
				State = 114;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__3 );
			State = 116;
			Match(T__1);
			State = 117;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ThreadCommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CommandsContext commands() {
			return GetRuleContext<CommandsContext>(0);
		}
		public ThreadCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_threadCommand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterThreadCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitThreadCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitThreadCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ThreadCommandContext threadCommand() {
		ThreadCommandContext _localctx = new ThreadCommandContext(Context, State);
		EnterRule(_localctx, 8, RULE_threadCommand);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			Match(T__3);
			State = 120;
			commands();
			State = 121;
			Match(T__4);
			State = 122;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfCommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ConditionContext condition() {
			return GetRuleContext<ConditionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandsContext commands() {
			return GetRuleContext<CommandsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElifContext[] elif() {
			return GetRuleContexts<ElifContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElifContext elif(int i) {
			return GetRuleContext<ElifContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElseBlockContext elseBlock() {
			return GetRuleContext<ElseBlockContext>(0);
		}
		public IfCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifCommand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterIfCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitIfCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfCommandContext ifCommand() {
		IfCommandContext _localctx = new IfCommandContext(Context, State);
		EnterRule(_localctx, 10, RULE_ifCommand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			Match(T__5);
			State = 125;
			condition();
			State = 126;
			commands();
			State = 130;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__7) {
				{
				{
				State = 127;
				elif();
				}
				}
				State = 132;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 134;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__8) {
				{
				State = 133;
				elseBlock();
				}
			}

			State = 136;
			Match(T__6);
			State = 137;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElifContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ConditionContext condition() {
			return GetRuleContext<ConditionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandsContext commands() {
			return GetRuleContext<CommandsContext>(0);
		}
		public ElifContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elif; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterElif(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitElif(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElif(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElifContext elif() {
		ElifContext _localctx = new ElifContext(Context, State);
		EnterRule(_localctx, 12, RULE_elif);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139;
			Match(T__7);
			State = 140;
			condition();
			State = 141;
			commands();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElseBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CommandsContext commands() {
			return GetRuleContext<CommandsContext>(0);
		}
		public ElseBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elseBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterElseBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitElseBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElseBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElseBlockContext elseBlock() {
		ElseBlockContext _localctx = new ElseBlockContext(Context, State);
		EnterRule(_localctx, 14, RULE_elseBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 143;
			Match(T__8);
			State = 144;
			commands();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConditionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_condition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterCondition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitCondition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCondition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConditionContext condition() {
		ConditionContext _localctx = new ConditionContext(Context, State);
		EnterRule(_localctx, 16, RULE_condition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 146;
			Match(T__9);
			State = 147;
			expr(0);
			State = 148;
			Match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
